<resources>
    <string name="app_name">CNSTapMonitor</string>
    <string name="tap_info">Begin Tapping!</string>
    <string name="tap_count">0</string>
    <string name="time_left">Time Left: %.1f</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enjoy_app">Enjoy using the app?</string>
    <string name="rate_app">Would you like to rate this app?</string>
    <string name="support_feedback">Would you like to give feedback on how we may improve the app?</string>
    <string name="support_email_address">mailto:cnstap.app@gmail.com</string>
    <string name="support_email_subject">CNS Tap Feedback</string>
    <string name="discard">Discard</string>
    <string name="save_message">Tap Count %d. Save this entry?</string>
    <string name="timeStamp">Date/Time: %s</string>
    <string name="numTaps">Tap Count: %d</string>
    <string name="GraphTitle">Tap Counts</string>
    <string name="rate_link">market://details?id=com.sreyas.cnstapmonitor</string>
    <string name="user_rated_app">rated</string>
    <string name="save_count">saveCount</string>
    <string name="feedback_action">action</string>
    <string name="bucket">cns-tap</string>
    <string name="privacy_policy">https://s3.amazonaws.com/%s/Privacy+Policy.htm</string>
</resources>
